--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./lessFamiliar.js">
 
 
   </script>
 </head>
 <body>
-  반갑구만! 반가워!
-  <div id="put"></div>
+  <h1>JS 기초 & 심화</h1>
+
+  <div>
+    <table style="border: 3px solid green;">
+      <tr>
+        <th>기초</th>
+      </tr>
+      <tr>
+        <td>
+          <a href="./view/basic01.html">덜 익숙한 문법 바로가기</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./view/basic02_callback.html">콜백 함수 바로가기</a>
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <div>
+    <table style="border: 3px solid red; margin-top: 50px;">
+      <tr>
+        <th>심화</th>
+      </tr>
+      <tr>
+        <td><a href="./view/hard01.html">단락평가</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard02.html">구조분해할당</a></td>
+      </tr>
+
+    </table>
+  </div>
+  
+  
+
+
+
 </body>
 </html>
