--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       <tr>
         <td><a href="./view/hard02.html">구조분해할당</a></td>
       </tr>
+      <tr>
+        <td><a href="./view/hard03.html">Spread연산자&Rest매개변수</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard04.html">원시타입&객체타입</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard05.html">반복문으로 배열,객체 순회</a></td>
+      </tr>
 
     </table>
   </div>
