--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
       <tr>
         <td><a href="./view/hard05.html">반복문으로 배열,객체 순회</a></td>
       </tr>
+      <tr>
+        <td><a href="./view/hard06.html">배열 메서드: 요소 조작</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard07.html">배열 메서드: 순회와탐색</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard08.html">배열 메서드: 요소 조작</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard09.html">Data객체와 날짜</a></td>
+      </tr>
 
     </table>
   </div>
