--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <td><a href="./view/hard06.html">배열 메서드: 요소 조작</a></td>
       </tr>
       <tr>
-        <td><a href="./view/hard07.html">배열 메서드: 순회와탐색</a></td>
+        <td><b><a href="./view/hard07.html">배열 메서드: 순회와탐색</b></a></td>
       </tr>
       <tr>
         <td><a href="./view/hard08.html">배열 메서드: 요소 조작</a></td>
