--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
       <tr>
         <td><a href="./view/hard09.html">Data객체와 날짜</a></td>
       </tr>
+      <tr>
+        <td><a href="./view/hard10.html">동기와 비동기</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard11.html">비동기: 콜백함수</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard12.html">비동기: Promise</a></td>
+      </tr>
+      <tr>
+        <td><a href="./view/hard13.html">비동기: Async&Await</a></td>
+      </tr>
 
     </table>
   </div>
